welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: value unary_! is not a member of Unit
  while (!fini){
         ^SnakeBuggle:30: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true;
               ^SnakeBuggle:30: warning: enclosing method fini has result type Unit: return value discarded
        return true;
        ^SnakeBuggle:37: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true;
               ^SnakeBuggle:37: warning: enclosing method fini has result type Unit: return value discarded
        return true;
        ^SnakeBuggle:41: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^SnakeBuggle:41: warning: enclosing method fini has result type Unit: return value discarded
  return false
  ^